# django-playgorund

./: pyproject.toml
polls/: tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html
server/: settings.py
